# AprilNav

./: .gitattributes  AT.sh  BlackCamera.sh  CMakeLists.txt  Calibrate.sh  DoubleTerminal.sh  Makefile  README.md
AprilNav/: .~lock.Coordinates.csv#  ATStripped.cpp  AprilNav.cpp  CMakeLists.txt  Coordinates.csv  WaypointInput.cpp
AprilTags/: Coordinates.h  Input.h  TagOptimization.h
Calibration/: BlackCamera.txt  CalibrationOutput.cpp  CameraCalibration.cpp
Data/: 4-30-2018-15_30_46_OptimizedData.csv  ExampleData_AllTags.csv
Python/: AprilTagsScrape.py  MeasureTags.py  Read.py  TagCoordinates.py  Write.py
example/: CMakeLists.txt  Serial.cpp  apriltags_demo.cpp  imu.cpp
src/: Coordinates.cc  Input.cc  TagOptimization.cc
